# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  formatters.py  gendiff.py  parser.py
gendiff/formatters/: __init__.py  common.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: plugins.py  test_gendiff.py  test_parser.py
tests/fixtures/: file2_2.json
tests/fixtures/expected/: json_nested.txt  plain.txt  stylish_nested.txt
tests/fixtures/inputs/json/: nested1.json  nested2.json
tests/fixtures/inputs/yaml/: file1_1.yaml  file2_2.yaml  nested1.yaml  nested2.yaml
tests/test_formatters/: test_common.py  test_plain.py  test_stylish.py
