[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Safintim <timurtlt96@mail.ru>"]
packages = [
    { include = "gendiff" }
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
isort = "^5.9.3"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
